--- a/index.html
+++ b/index.html
@@ -186,6 +186,38 @@
 <!-----contact------>
 
 
+<div class="container">
+    <div class="row">
+        <div class="contact-left">
+            <h1 class="sub-title">Contact Me</h1>
+            <p><i class="fa-solid fa-paper-plane"></i>imalsathiragunathilaka@gmail.com</p>
+            <p><i class="fa-solid fa-phone"></i></i>071-6624413</p>
+            <div class="social-icon">
+                <a href="https://www.linkedin.com/in/imal-sathira-gunathilaka-426466278/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/Imal-Sathira"><i class="fa-brands fa-github"></i></a>
+                <a href="https://wa.me/94716624413"><i class="fa-brands fa-square-whatsapp"></i></a>
+                <a href="https://www.canva.com/design/DAGLHa1m8t8/3KWIQiJx9kjlEeB_y_BEMw/view?utm_content=DAGLHa1m8t8&utm_campaign=designshare&utm_medium=link&utm_source=editor"><i class="fa-solid fa-envelope"></i></a>
+                <a href="mailto:imalsathiragunathilaka@gmail.com"><i class="fa-solid fa-file"></i></a>
+            </div>
+            <a href="images/resume.pdf" download class="btn btn2">Download Resume</a>
+        </div>
+        <div class="contact-right">
+            <form action="">
+                <input type="text" name="Name" placeholder="Your Name" reqired>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                <button type="submit" class="btn btn2">Submit</button>
+            </form>
+            
+        </div>
+    </div>
+
+    <div class="copyright">
+        <p>Copyright @ Imal Sathira</p>
+    </div>
+</div>
+
+
 <script>
 
     var tablinks=document.getElementsByClassName("tab-links");
